# transformer_brain_encoder

./: .gitignore  README.md  brain_encoder_wrapper.py  engine.py  main.py  pyproject.toml  run_model.ipynb  test_wrapper.ipynb  visualize_results.ipynb
configs/tben/: base.yaml  dinov2_q_rois_all.yaml
docs/plans/: 2026-03-06-legacy-cutover-design.md  2026-03-06-legacy-cutover.md
models/: brain_encoder.py
src/: __init__.py  config.py
src/cli/: evaluate.py  inspect_data.py  predict.py  train.py
src/data/: __init__.py  algonauts.py  datamodule.py  dataset.py  manifest.py  rois.py
src/models/: __init__.py  model.py
src/models/backbones/: __init__.py  base.py  clip.py  dinov2.py  registry.py  resnet.py
src/models/readouts/: __init__.py  linear.py  registry.py  spatial_feature.py  tben.py
src/tools/: evaluate_saved_runs.py  export_prediction_shapes.py
src/train/: __init__.py  checkpoints.py  distributed.py  losses.py  metrics.py  trainer.py
src/utils/: __init__.py
tests/: test_backbone_registry.py  test_checkpointing.py  test_cli_smoke.py  test_config.py  test_dataset.py  test_distributed_config.py  test_end_to_end_smoke.py  test_imports.py  test_manifest.py  test_no_legacy_runtime_refs.py  test_paper_config_smoke.py  test_readout_registry.py  test_rois.py  test_tben_forward.py  test_wrapper.py
